# ruflo-os-v2

./: .env.example  .gitignore  .gitmodules  .npmrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  HONEST_LIMITATIONS.md  Makefile  README.md  RELEASE.md  RUNBOOK.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pytest.ini  watch_25274523366.txt
.github/workflows/: build-iso.yml  ci.yml  e2e.yml
agents/lumyn/: Dockerfile  README.md  requirements.txt  (+1 more)
ai-core/prax-brain/: pyproject.toml  requirements.txt
ai-core/prax-brain/prav/: __init__.py  autonomous_loop.py  github_publisher.py  mind_rewriter.py  project_builder.py  proposal_engine.py  researcher.py  self_modifier.py  viral_publisher.py
ai-core/prax-brain/tests/: conftest.py  test_autonomous_loop.py  test_github_publisher.py  test_mind_rewriter.py  test_project_builder.py  test_proposal_engine.py  test_researcher.py  test_self_modifier.py  test_viral_publisher.py
automation/: docker-compose.yml
desktop/aqua-shell/src-tauri/: Cargo.toml  tauri.conf.json
desktop/aqua-shell/src-tauri/capabilities/: default.json
desktop/aqua-shell/src-tauri/src/: commands.rs  dock.rs  health.rs  lib.rs  main.rs  notify.rs  tasks.rs
docs/: ARCHITECTURE.md  BUILD.md  DEPENDENCY-AUDIT.md  NODE-AUDIT.md  PHASE-B-COMPLETION.md
iso-build/: Makefile  README.md  build.sh
platform/: conftest.py
platform/model-manager/: Dockerfile  README.md  pyproject.toml  requirements.txt
platform/model-manager/prady_models/: __init__.py  __main__.py  cli.py  config.py  download.py  logger.py  manager.py  metadata.py  platform_api.py  registry.py  warmup.py  web.py
platform/model-manager/prady_models/templates/: index.html
platform/model-manager/tests/: test_download.py  test_manager_rollback.py  test_registry.py
prax-agent/: package.json
prax-input/: Makefile
scripts/: build-iso.sh  canonical-rename.ps1  filename_callback.py  rename-files.ps1  run-history-rewrite.ps1  setup-dev.sh  test-hooks-dry-run.sh  test-integration.sh  verify-integration.sh
vision/: element_detector.py  ocr.py  requirements.txt  server.py
(+644 files in other folders)
