[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemos-model-manager"
version = "0.1.0"
description = "Prady model manager CLI and web UI"
requires-python = ">=3.11"
dependencies = [
  "typer==0.12.5",
  "requests==2.32.3",
  "PyYAML==6.0.2",
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "jinja2==3.1.4",
  "python-multipart==0.0.12",
  "llama-cpp-python==0.3.1",
]

[project.scripts]
prady-models = "prady_models.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prady_models*"]
