[package]
name = "aqua-shell"
version = "0.1.0"
description = "Prady Desktop Aqua Shell – macOS-inspired desktop environment"
edition = "2021"

[lib]
name = "aqua_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2" }
tauri-plugin-shell = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tokio            = { version = "1", features = ["full"] }
axum             = { version = "0.7", features = ["json"] }
reqwest          = { version = "0.12", features = ["json"] }
uuid             = { version = "1", features = ["v4"] }
chrono           = { version = "0.4", features = ["serde"] }

[features]
default          = []
custom-protocol  = ["tauri/custom-protocol"]

[dev-dependencies]
tokio-test = "0.4"
